add bem for work

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <header class="header">
@@ -145,23 +145,23 @@
         <section class="section work">
             <div class="container">
                 <h2 class="section-title">Чим ми займаємося</h2>
-                <ul class="section-list">
-                    <li class="section-item">
-                        <div class="thumb">
+                <ul class="work__list list">
+                    <li class="work__item">
+                        <div class="work__thumb">
                         <img src="./images/box1.jpg" alt="написання коду" width="370" height="294" style="display: block;">
-                        <h3 class="label">Десктопні додатки</h3>
+                        <h3 class="work__label">Десктопні додатки</h3>
                         </div>
                     </li>
-                    <li class="section-item">
-                        <div class="thumb">
+                    <li class="work__item">
+                        <div class="work__thumb">
                         <img src="./images/box2.jpg" alt="робота з мобільним додатком" width="370" height="294" style="display: block;">
-                        <h3 class="label">Мобільні додатки</h3>
+                        <h3 class="work__label">Мобільні додатки</h3>
                         </div>
                     </li>
-                    <li class="section-item">
-                        <div class="thumb">
+                    <li class="work__item">
+                        <div class="work__thumb">
                         <img src="./images/box3.jpg" alt="графічний дизайн" width="370" height="294" style="display: block;">
-                        <h3 class="label">Дизайнерські рішення</h3>
+                        <h3 class="work__label">Дизайнерські рішення</h3>
                         </div>
                     </li>
                 </ul>
