start bem for benefits

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                 </div>
             </div>
         </section>
-        <section class="section peculiarities">
+        <section class="section benefits">
             <div class="container"> 
                 <h2 hidden class="section-title">Особливості</h2>
-                <ul class="feature-list">
+                <ul class="benefits__list">
                     <li class="feature-item">
                         <div class="feature-item-link">
                             <svg class="feature-icon" width="70" height="70">
@@ -144,7 +144,7 @@
         </section>
         <section class="section work">
             <div class="container">
-                <h2 class="section-title">Чим ми займаємося</h2>
+                <h2 class="work__title">Чим ми займаємося</h2>
                 <ul class="work__list list">
                     <li class="work__item">
                         <div class="work__thumb">
