--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <main>
         <section class="section hero">
             <div class="container">
-                <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
-                <button type="button" class="hero-button" data-modal-open>Замовити послугу</button>
+                <h1 class="hero__title">Ефективні рішення для <br> вашого бізнесу</h1>
+                <button type="button" class="hero__button" data-modal-open>Замовити послугу</button>
                 <div class="backdrop is-hidden" data-modal>
                     <div class="modal">
                     <button class="modal-button" data-modal-close><svg class="modal-button-icon" width="11" height="11">
@@ -103,41 +103,41 @@
             <div class="container"> 
                 <h2 hidden class="section-title">Особливості</h2>
                 <ul class="benefits__list">
-                    <li class="feature-item">
-                        <div class="feature-item-link">
-                            <svg class="feature-icon" width="70" height="70">
+                    <li class="benefits__item">
+                        <div class="benefits__image">
+                            <svg class="benefits__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p class="feature-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                        <h3 class="benefits__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="benefits__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li class="feature-item">
-                        <div class="feature-item-link">
-                            <svg class="feature-icon" width="70" height="70">
+                    <li class="benefits__item">
+                        <div class="benefits__image">
+                            <svg class="benefits__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
-                        <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p class="feature-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                        <h3 class="benefits__title">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="benefits__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="feature-item">
-                        <div class="feature-item-link">
-                            <svg class="feature-icon" width="70" height="70">
+                    <li class="benefits__item">
+                        <div class="benefits__image">
+                            <svg class="benefits__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="feature-title">ПЛАНУВАННЯ</h3>
-                        <p class="feature-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                        <h3 class="benefits__title">ПЛАНУВАННЯ</h3>
+                        <p class="benefits__text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="feature-item">
-                        <div class="feature-item-link">
-                            <svg class="feature-icon" width="70" height="70">
+                    <li class="benefits__item">
+                        <div class="benefits__image">
+                            <svg class="benefits__icon" width="70" height="70">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="feature-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        <h3 class="benefits__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="benefits__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
             </div>
