fixed bem for hero, benefits, work and team

--- a/index.html
+++ b/index.html
@@ -167,144 +167,144 @@
                 </ul>
             </div>
         </section>
-        <section class="section our-team">
+        <section class="section team">
             <div class="container">
-                <h2 class="section2-title">Наша команда</h2>
-                <ul class="section2-list">
-                    <li class="team-member">
+                <h2 class="team__title">Наша команда</h2>
+                <ul class="team__list">
+                    <li class="team__member">
                         <img src="./images/igor.jpg" alt="Ігор посміхається" width="270" height="260" style="display: block;">
-                        <h3 class="name">Ігор Дем'яненко</h3>
-                        <p class="position">Product Designer</p>
-                        <ul class="member-soc-list">
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                        <h3 class="team__name">Ігор Дем'яненко</h3>
+                        <p class="team__position">Product Designer</p>
+                        <ul class="member__list">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li class="team-member">
+                    <li class="team__member">
                         <img src="./images/olga.jpg" alt="Ольга посміхається" width="270" height="260" style="display: block;">
-                        <h3 class="name">Ольга Рєпіна</h3>
-                        <p class="position">Frontend Developer</p>
-                        <ul class="member-soc-list">
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                        <h3 class="team__name">Ольга Рєпіна</h3>
+                        <p class="team__position">Frontend Developer</p>
+                        <ul class="member__list">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li class="team-member">
+                    <li class="team__member">
                         <img src="./images/mukola.jpg" alt="Микола посміхається" width="270" height="260" style="display: block;">
-                        <h3 class="name">Микола Тарасов</h3>
-                        <p class="position">Marketing</p>
-                        <ul class="member-soc-list">
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                        <h3 class="team__name">Микола Тарасов</h3>
+                        <p class="team__position">Marketing</p>
+                        <ul class="member__list">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
                         </ul>
                     </li>
-                    <li class="team-member">
+                    <li class="team__member">
                         <img src="./images/mikhailo.jpg" alt="Михайло посміхається" width="270" height="260" style="display: block;">
-                        <h3 class="name">Михайло Єрмаков</h3>
-                        <p class="position">UI Designer</p>
-                        <ul class="member-soc-list">
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                        <h3 class="team__name">Михайло Єрмаков</h3>
+                        <p class="team__position">UI Designer</p>
+                        <ul class="member__list">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="member-soc-item">
-                                <a class="member-soc-link link" href="#">
-                                    <svg class="member-soc-icon" width="20" height="20">
+                            <li class="member__item">
+                                <a class="member__link link" href="#">
+                                    <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -316,46 +316,46 @@
         </section>
         <section class="clients">
             <div class="container">
-                <h2 class="section-title">Постійні клієнти</h2>
-                <ul class="clients-list">
-                    <li class="clients-logo">
-                        <a class="clients-logo-link" href="#">
-                            <svg class="clients-logo-icon" width="106" height="60">
+                <h2 class="clients__title">Постійні клієнти</h2>
+                <ul class="clients__list">
+                    <li class="clients__logo">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-logo">
-                        <a class="clients-logo-link" href="#">
-                            <svg class="clients-logo-icon" width="106" height="60">
+                    <li class="clients__logo">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-logo">
-                        <a class="clients-logo-link" href="#">
-                            <svg class="clients-logo-icon" width="106" height="60">
+                    <li class="clients__logo">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-logo">
-                        <a class="clients-logo-link" href="#">
-                            <svg class="clients-logo-icon" width="106" height="60">
+                    <li class="clients__logo">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-logo">
-                        <a class="clients-logo-link" href="#">
-                            <svg class="clients-logo-icon" width="106" height="60">
+                    <li class="clients__logo">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients-logo">
-                        <a class="clients-logo-link" href="#">
-                            <svg class="clients-logo-icon" width="106" height="60">
+                    <li class="clients__logo">
+                        <a class="clients__link" href="#">
+                            <svg class="clients__icon" width="106" height="60">
                                 <use href="./images/icons.svg#icon-logo6"></use>
                             </svg>
                         </a>
